# TreeSearch

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
include/: decl.h  faces.h  successstates.hpp  treegraph.hpp  treeutils.h  treeutils.hpp
old/: main.c  main.cpp  masks.hpp  matrix.hpp  profiling.hpp  tile.hpp  tree_node.cpp  tree_node.hpp
src/: main.c  main.cpp  successstates.cpp  treeutils.c  treeutils.cpp
